--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,7 +36,7 @@ jobs:
         pytest
     - name: Run login test
       run: |
-        test_hg_login.py
+        python test_hg_login.py
     - name: Run player test
       run: |
-        test_hg_player.py
+        python test_hg_player.py
