--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "cucumber-js ./Test/features",
-    "cucumber": "cucumber-js ./Test/features"
+    "upd webdriver": "cd e2e/ && webdriver-manager update",
+    "start webdriver": "cd e2e/ && webdriver-manager start",
+    "test": "protractor e2e/cucumberConf.js"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +20,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "cucumber": "^6.0.5",
+    "protractor": "^5.4.4",
+    "chai": "^4.2.0",
+    "protractor-cucumber-framework": "^6.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,7 +32,6 @@
     "@angular-devkit/build-angular": "~13.1.2",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
-    "@cucumber/cucumber": "^8.0.0-rc.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
@@ -36,7 +40,10 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "protractor-cucumber-framework": "^8.2.11",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "cucumber": "^6.0.5",
+    "protractor": "^5.4.4",
+    "chai": "^4.2.0",
+    "protractor-cucumber-framework": "^6.2.1"
   }
 }
